<resources>
    <string name="app_name">App4: Cálculo de Áreas</string>
    <string name="action_settings">Settings</string>

    <string name="tvDesc">Descripción: El objetivo es calcular el área de las figuras a continuación.\n</string>
    <string name="tvDesc2">Ingresar parámetros correspondientes:</string>
    <string name="btnCalcArea">Calcular Área</string>
    <string name="tvResulArea">Área =\t</string>
    <string name="rbtnCirc">Círculo</string>
    <string name="rbtnCuad">Cuadrado</string>
    <string name="rbtnTriang">Triángulo</string>
    <string name="rbtnRect">Rectángulo\t</string>
    <string name="tvBase">Base:\t</string>
    <string name="tvAltura">Altura:\t</string>
    <string name="tvRadio">Radio:\t</string>
    <string name="tvLado">Lado:\t</string>
    <string name="etIngBase">Aquí</string>
    <string name="etIngAltura">Aquí</string>
    <string name="etIngRadio">Aquí</string>
    <string name="etIngLado">Aquí</string>
    <string name="tvCalcCirc">Calcular Área</string>
    <string name="tvAreaCirc">____</string>

</resources>
